--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,15 @@
 #dropfile{
-    width: 200px;
-    height: 200px;
-    background-color: green;
+    width: 100%;
+    height: 50%;
+    background-color: grey;
 }
-
+#pw{
+    width: 100%;
+    font-size: 20px;
+}
+label{
+    font-size: 20px;
+}
 .dragover{
-    background-color: greenyellow !important;
+    background-color: cyan !important;
 }
